--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 .idea
 .venv
+
+
+#Added by cargo
+
+/target
+
+
+#Added by cargo
+#
+#already existing elements were commented out
+
+#/target
+Cargo.lock
